# Mekatronikk_mini_prosjekt

./: .gitignore  README.md
qube_bringup/: package.xml  setup.py
qube_bringup/config/: qube.rviz  qube_controllers.yaml
qube_bringup/launch/: bringup.launch.py
qube_bringup/urdf/: controlled_qube.urdf.xacro  qube_driver_ros2_control.xacro
qube_controller/: CMakeLists.txt  package.xml
qube_controller/include/: pid_controller.hpp  qube_controller_node.hpp  qube_simulator.hpp  qube_simulator_node.hpp
qube_controller/launch/: launch.py
qube_controller/launch/config/: parameters.yaml
qube_controller/src/: main.cpp
qube_controller_msgs/: CMakeLists.txt  package.xml
qube_controller_msgs/include/: qube_controller_client.hpp
qube_controller_msgs/src/: main.cpp
qube_description/config/: qube.rviz
qube_description/launch/: view_qube.launch.py
qube_description/urdf/: qube.macro.xacro  qube.urdf.xacro
